--- a/styles/detail.css
+++ b/styles/detail.css
@@ -28,7 +28,7 @@ margin: 2% 4% 0% 4% ;
 }
 .form{
 /* width: 25%; */
-margin: 5% 4% 1% 4%;
+margin: 5% 4% 0% 4%;
 /* display: flex; */
 
 }
@@ -45,11 +45,14 @@ font-size: 10px;
 margin:19px 0px;
 }
 .social_handles{
-float: right;
+    float: right;
+    padding: 1px;
+    margin:11px 2px 1px 0px;
 }
 .contact{
-float: left;
-margin: 1.5%;
+    float: left;
+    margin: 0.6% 2%;
+    padding: 0.1% 0.2%;
 }
 a{
 color: black;
@@ -67,7 +70,7 @@ margin-left: 15%;
 }
 .form_div{
 width: 30%;
-padding: 1.5%;
+padding: 1%;
 }
 .vl {
 border-left: 2px solid black;
@@ -77,8 +80,8 @@ h4{
 font-family: cursive;
 }
 input{
-width: 58%;
-padding: 0% 2%;
+width: 65%;
+padding: 0% 0%;
 }
 .button{
 margin: 0% 0% 0% 40%;
