--- a/styles/list.css
+++ b/styles/list.css
@@ -21,15 +21,18 @@ footer{
 .hotel_description{
     float: right;
     margin-top: 0%;
-    margin-right: 27%;
+    /* margin-right: 27%; */
+    margin: 3% 21% 3% 3%
 }
 .hotel_description1{
     float: right;
-    margin-right: 42%;
+    /* margin-right: 42%; */
+    margin: 5% 39% 6% 1%
 }
 #login{
+    padding: 0.3%;
     float: right;
-    margin: 1.5%;
+    margin: 0.7% 3%;
 }
 
 .content{
@@ -45,6 +48,12 @@ footer{
     margin-right: auto;
     
     
+}
+.hotel_cards:hover{
+    background-color: rosybrown;
+}
+.hotel_cards1:hover{
+    background-color: rosybrown;
 }
 .hotel_cards1{
     margin: 2%;
@@ -76,12 +85,16 @@ padding: 2px 10px;
 .copyright{
     text-align: center;
     font-size: 10px;
+    bottom: 0;
+    margin: 1%;
 }
 .social_handles{
     float: right;
     padding: 1px;
+    margin:11px 2px 1px 0px;
 }
 .contact{
     float: left;
-    margin: 1.5%;
+    margin: 0.6% 2%;
+    padding: 0.1% 0.2%;
 }
