--- a/styles/loader.css
+++ b/styles/loader.css
@@ -12,5 +12,11 @@ body{
  border-top: 12px solid #444444; 
 border-radius: 50%;
  width: 70px;
- height: 70px;    
+ height: 70px; 
+ animation: spin 1s linear infinite;   
 }
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
